Toontown/logs/toontown-150429_195931.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Injector Opened
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tt-beta-v.1.0.1 (Squirting Flower)
Preloading avatars...
Done preloading avatars.
Traceback (most recent call last):
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\user\Downloads\Ansem\aviproxy\Fusion364\TT Offline Modded\Toontown\toontown\toonbase\ToontownStartWithInjector.py", line 155, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 41, in <module>
    from toontown.makeatoon import MakeAToon
  File "toontown\makeatoon\MakeAToon.py", line 6, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 58, in <module>
    from toontown.quest import QuestMap
  File "toontown\quest\QuestMap.py", line 9, in <module>
    from toontown.suit import SuitPlannerBase
  File "toontown\suit\SuitPlannerBase.py", line 5, in <module>
    from toontown.building import SuitBuildingGlobals
  File "toontown\building\SuitBuildingGlobals.py", line 35
    SUIT_BLDG_INFO_FLOORS = 0
                          ^
SyntaxError: invalid syntax
